// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verifying TableItem component TableItem component renders correctly 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    aria-label="simple table"
    className="MuiTable-root makeStyles-table-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
          scope="col"
        >
          <h3>
            Title
          </h3>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
          scope="col"
        >
          <h3>
            Title
          </h3>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          row
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          value
        </td>
      </tr>
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          Summary
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "summary",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`verifying TableItem component TableItem renders correctly 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    aria-label="simple table"
    className="MuiTable-root makeStyles-table-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
          scope="col"
        >
          <h3>
            Title
          </h3>
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
          scope="col"
        >
          <h3>
            Title
          </h3>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          Row
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          Title
        </td>
      </tr>
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          Summary
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Summary",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
